# git_playground

./: CMakeLists.txt  README.md
inc/: A.h  B.h  C.h
src/: A.cpp  B.cpp  maincli.cpp
